--- a/MainLib.Test/MainLib.Test.csproj
+++ b/MainLib.Test/MainLib.Test.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Services\PatientServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
