--- a/StuffLib/packages.config
+++ b/StuffLib/packages.config
@@ -5,7 +5,9 @@
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
+  <package id="fo-dicom" version="1.0.37" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="MvvmEventBinding" version="1.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
 </packages>
