--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -121,6 +121,9 @@
     <Compile Include="View\EditPersonView.xaml.cs">
       <DependentUpon>EditPersonView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\InsuranceDocementView.xaml.cs">
+      <DependentUpon>InsuranceDocementView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\PatientSearchUserControl.xaml.cs">
       <DependentUpon>PatientSearchUserControl.xaml</DependentUpon>
     </Compile>
@@ -132,7 +135,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\InsuranceDocumentView.xaml">
+    <Page Include="View\InsuranceDocementView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
