--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\PersonRelativeDTO.cs" />
     <Compile Include="Implementation\PersonService.cs" />
     <Compile Include="Interface\IPersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
