--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -113,6 +113,7 @@
     <Compile Include="DTO\AssignmentDTO.cs" />
     <Compile Include="Helpers\ScrollViewerHelper.cs" />
     <Compile Include="ViewModel\EditPersonViewModel.cs" />
+    <Compile Include="ViewModel\PersonInsuranceDocumentsViewModel.cs" />
     <Compile Include="ViewModel\InsuranceDocumentViewModel.cs" />
     <Compile Include="Services\Interface\IPatientAssignmentService.cs" />
     <Compile Include="Services\Implementation\PatientAssignmentService.cs" />
@@ -121,8 +122,8 @@
     <Compile Include="View\EditPersonView.xaml.cs">
       <DependentUpon>EditPersonView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\InsuranceDocumentView.xaml.cs">
-      <DependentUpon>InsuranceDocumentView.xaml</DependentUpon>
+    <Compile Include="View\PersonInsuranceDocumentsView.xaml.cs">
+      <DependentUpon>PersonInsuranceDocumentsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\PatientSearchUserControl.xaml.cs">
       <DependentUpon>PatientSearchUserControl.xaml</DependentUpon>
@@ -135,7 +136,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\InsuranceDocumentView.xaml">
+    <Page Include="View\PersonInsuranceDocumentsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
