Initial infrastructure for schedule

--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Misc\IDataAccessLayer.cs" />
     <Compile Include="Misc\ISimpleLocator.cs" />
     <Compile Include="Misc\ObjectCache.cs" />
+    <Compile Include="Misc\WorkingTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
