--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -113,6 +113,8 @@
     <Compile Include="Converters\TimeToHeightConverter.cs" />
     <Compile Include="DTO\AssignmentDTO.cs" />
     <Compile Include="Helpers\ScrollViewerHelper.cs" />
+    <Compile Include="Services\Interface\IScheduleService.cs" />
+    <Compile Include="Services\Implementation\ScheduleService.cs" />
     <Compile Include="ViewModel\EditPersonViewModel.cs" />
     <Compile Include="ViewModel\PersonInsuranceDocumentsViewModel.cs" />
     <Compile Include="ViewModel\InsuranceDocumentViewModel.cs" />
@@ -120,6 +122,7 @@
     <Compile Include="Services\Implementation\PatientAssignmentService.cs" />
     <Compile Include="ViewModel\AssignmentViewModel.cs" />
     <Compile Include="ViewModel\PatientAssignmentListViewModel.cs" />
+    <Compile Include="ViewModel\RoomViewModel.cs" />
     <Compile Include="ViewModel\ScheduleViewModel.cs" />
     <Compile Include="View\EditPersonView.xaml.cs">
       <DependentUpon>EditPersonView.xaml</DependentUpon>
@@ -230,7 +233,9 @@
       <Name>StuffLib</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <SplashScreen Include="SplashScreen.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
