Minor changes in insuranceDocument item

--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -113,6 +113,7 @@
     <Compile Include="DTO\AssignmentDTO.cs" />
     <Compile Include="Helpers\ScrollViewerHelper.cs" />
     <Compile Include="ViewModel\EditPersonViewModel.cs" />
+    <Compile Include="ViewModel\ItemState.cs" />
     <Compile Include="ViewModel\PersonInsuranceDocumentsViewModel.cs" />
     <Compile Include="ViewModel\InsuranceDocumentViewModel.cs" />
     <Compile Include="Services\Interface\IPatientAssignmentService.cs" />
