--- a/StuffLib/StuffLib.csproj
+++ b/StuffLib/StuffLib.csproj
@@ -161,6 +161,11 @@
   <ItemGroup>
     <Resource Include="License.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="dlls\WpfControls.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
