--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -63,6 +63,9 @@
     <Resource Include="Images\DB_refresh_24x24.png" />
     <Resource Include="Images\Refresh_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\FolderSearch_48x48.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
