--- a/MainLib.Test/MainLib.Test.csproj
+++ b/MainLib.Test/MainLib.Test.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Misc\TimeIntervalCollectionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PatientServiceTest.cs" />
   </ItemGroup>
