--- a/Registry/Registry.csproj
+++ b/Registry/Registry.csproj
@@ -239,9 +239,7 @@
   <ItemGroup>
     <SplashScreen Include="SplashScreen.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Converters\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
