--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -77,6 +77,9 @@
     <Resource Include="Icons\AddUser_48x48.ico" />
     <Resource Include="Icons\Edit_48x48.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Error16x16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
